[PAY-1618] Update DogEar rendering and fix spacing (#3775)

--- a/packages/web/src/components/track/GiantTrackTile.module.css
+++ b/packages/web/src/components/track/GiantTrackTile.module.css
@@ -11,6 +11,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   position: relative;
+  border-radius: var(--unit-3) var(--unit-3) 0px 0px;
   background-color: var(--neutral-light-10);
 
   padding: var(--unit-6);
